added unfi protect
1. added support for unifi protect cameras (this requires mac os 10.14 or higher)
   - get cameras from unifi systems and create indigo devices
   - the plugin will listen to events, create dev states for start time / end time/ time length of event
     get thumbnails jpegs and or heatmap jpegs
        enable / disable / configure thumbnails in camera device edit
     events are also setting variables:
        Unifi_Camera_Event_Date  date string of last event; eg "2021-03-11 22:33:26"
        Unifi_Camera_with_Event  device name of camera of last event; eg "Camera_Reserve-UVC G3  Flex"
        Unifi_Camera_Event_pathtoThumbnail  path to last event thumbnail; eg "/Users/karlwachs/indigo/protect/Camera_Reserve-UVC G3  Flex_snapshot.jpeg"

   - get snap shots through menu or actions at any time, with selectable resolution
   - set parameters of cameras for IR-LED, status-LED, speaker, mic, motion trigger etc in menu and actions
   - added debug option for protect in config
   - the dev/state "smartDetect" is blank or "vehicle" or "person" if the smart detect option is enabled to detect objects for events

 ==> to enable: set camera to protect in config (just above debug)
                and set repeat frequencies ...
     all camears connected / adopted by protect will be cretaed in the folder unifi_created.

==> how to use / setup:
    1. enable protect in config (bottom, above debug section)
       select "protect"
       set repeat query for device state checks and event tracking
       sel path for thumbnails
    2. Then trigger on any change camera xx dev/states["eventStart"] ==> new movement at camera xx
       or on variable Unifi_Camera_Event_Date
       the path to the thumbnail is in dev/state "eventJpeg" and in variable "Unifi_Camera_Event_pathtoThumbnail"
       eg: "/Users/youruserid/Camera_living window G3 Flex_snapshot.jpeg"
       the thumbnail are only availabe at the end of teh event (dev/states["eventEnd"] is changed to !=-1)
    

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,6 +1,6 @@
-changes in V 7.38.345 @ 2021-03-11
+changes in V 7.38.346 @ 2021-03-11
 ==================  
-1. added support for unifi protect cameras
+1. added support for unifi protect cameras (this requires mac os 10.14 or higher)
    - get cameras from unifi systems and create indigo devices
    - the plugin will listen to events, create dev states for start time / end time/ time length of event 
      get thumbnails jpegs and or heatmap jpegs 
