--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,7 +1,15 @@
+changes in V 7.38.349 @ 2021-03-13
+==================  
+1. added camera report menu item in Camera ....
+2. fixed camId not found (in exception handling)
+   fixed dev states not updated continuously
+
+
 changes in V 7.38.348 @ 2021-03-13
 ==================  
 1. added camera report menu item in Camera ....
 2. fixed camId not found (in exception handling)
+
 
 changes in V 7.38.347 @ 2021-03-12
 ==================  
