add full support for thumbnails for events
changes in V 7.38.352@ 2021-03-15
==================
1. fixed some exception handling errors
2. now handles overlapping events better eg
   doorbell has motion event and then a doorbell rung event before the motion event ends
   smart detected person or vehicle: it will cretae several events for teh same detection.
   they are shown in the vaiables
3. handling of orphan events in the plugin that do not create and end event.
   those would keep the status at eg motion for ever or until when the next event occurs
4. added some more columns to the camera report

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,15 +1,10 @@
-changes in V 7.38.351 @ 2021-03-14
+changes in V 7.38.352@ 2021-03-15
 ==================  
 1. fixed some exception handling errors
 2. now handles overlapping events better eg
    doorbell has motion event and then a doorbell rung event before the motion event ends
    smart detected person or vehicle: it will cretae several events for teh same detection.
-     right now the plugin will now only use the smart detect parts not the overall pic.
-     still thinkout that one. there are several evnst coming within << 1 sec for teh same camera
-     in general all would trigger an event, the question is which should be used for the thumbnail
-     right now it will pick the vehilce / person 
-   it will now show motion/ring/vehicle/person in the status field instead of "event"
-   The normal state is "CONNECTED"
+   they are shown in the vaiables
 3. handling of orphan events in the plugin that do not create and end event. 
    those would keep the status at eg motion for ever or until when the next event occures 
 4. added some more columns to the camera report
