--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,10 @@
+changes in V7.39.356@ 2021-04-02
+==================  
+1. removed old loggin method
+2. added log statment for sitename pick in plugin config
+
+
+
 changes in V7.39.356@ 2021-04-01
 ==================  
 1. - added new schema for groups  
