--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,6 +1,19 @@
-changes in V7.39.3730@ 2022-02-20
+changes in V7.40.374@ 2022-03-29
+==================  
+   1. prepared for OS 12.3 and indigo 2022
+
+
+
+changes in V7.39.374@ 2022-03-1
+==================  
+   1. increaseed the number of APs supported to 10 (0-9)
+
+
+
+changes in V7.39.373@ 2022-02-20
 ==================  
    1. added logging while error  while creating devices
+
 
 
 changes in V7.39.3720@ 2022-02-09
