ixed waitqueue for stats analysis,
fixed waitqueue for stats analysis, gave sometimes an error..  when queue was empty

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,4 +1,10 @@
-changes in V7.40.375@ 2022-04-20
+changes in V7.40.378@ 2022-05-26
+==================  
+   1. fixed waitqueue for stats analysis, gave sometimes an error..  when queue was empty
+
+
+
+changes in V7.40.377@ 2022-04-20
 ==================  
    1. fixed status did not got up --> down (one tab was missing)
 
