--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,9 +1,11 @@
 
-changes in V2022.42.388@ 2023-07-20
+changes in V2022.42.389@ 2023-07-20
 ==================  
 1. added config option in general section to set request - curl timeout to any value >=1 sec
 2. made error logging more verbose 
 3. added option to supress test logging at startup, default is log, set in config under section debug
+4. fixed print parameters requests timeout was not properly formatted
+
 
 
 changes in V2022.42.385@ 2023-07-19
