first test version for separate protect box
changes in V2022.46.422@ 2024-10-20
==================
-   adding option to have protect recording and controller on 2 different devices
    in config in camera section set protect ip and port number, if not set they will inherit the controller ip and port number and hence be on the same box
    they must be on the same os level and settings:
    same user id, same password. protect is fixed to be on port 433 and hence controller also ahs to be on port 433.. at least for the time being.

- added  action to set zoom, position (only G5+) brightness, saturation, sharpness, hue, pan tilt,...

- added  general action for camera. can do any action in script: zoom, set to predefined positions, set contrast, led on off, speak on off ,...
    with this you can eg drive zoom with indigo variables or dev states in a indigo server action script
	see examples

- changed protecEventSleepTime from 0.5 secs to 500mSec in puglinconfig. as 0.5 is not propery show as 0.5 but 0.4999999 and hece not displayed in config

- removed obsolete  NVR type video functions (predecessor to protect)

--- a/uniFiAP.indigoPlugin/Contents/changeLog.txt
+++ b/uniFiAP.indigoPlugin/Contents/changeLog.txt
@@ -1,3 +1,30 @@
+changes in V2022.46.408@ 2024-10-16
+==================  
+-   adding option to have protect recording and controller in 2 different devices
+    in config set enable split controller and protect
+              then set the 2 ipnumbers for the 2 devices
+- added  general action for camera. can do any action in script.
+
+
+changes in V2022.45.405@ 2024-10-10
+==================  
+-   added test menu for camera commands (for development)
+-   added zoom option for cameras in menu and actions
+
+changes in V2022.44.405@ 2024-10-10
+==================  
+-   added error logging for camera section
+-   added check for name is none in cameras, added option in config to create / not create these devices 
+-   added state "created" for camera devices 
+-   added 3 secs for time window for event detetction 
+-   added menu item to zoom/ move camera, experimental 
+
+
+changes in V2022.43.399@ 2024-01-22
+==================  
+-   if not logged in due to eg expiration, better logging 
+-   suppress "fixed after xx" try for protect thumbnail http-gets. this can take longer depending on how long an event takes
+
 changes in V2022.43.397@ 2024-01-13
 ==================  
 -	in case of http error, the plugin does not print a large dump anymore, but it will
